# rust-inference-bench

./: Cargo.toml  README.md
.cargo/: config.toml
crates/benchmark-runner/: Cargo.toml  README.md
crates/engines/burn-bench/: Cargo.toml  README.md
crates/engines/candle-bench/: Cargo.toml  README.md
crates/engines/lm-rs-bench/: Cargo.toml  README.md
crates/engines/mistral-rs-bench/: Cargo.toml  README.md
crates/engines/pytorch-baseline/: Cargo.toml  README.md
crates/shared-protocol/: Cargo.toml  README.md
docs/: architecture.md  benchmark-specification.md  code-conventions.md  getting-started.md  native-optimization.md  test-methodology.md
