[workspace]
members = [
    "crates/shared-protocol",
    "crates/benchmark-runner", 
    "crates/engines/pytorch-baseline",
    "crates/engines/lm-rs-bench",
    "crates/engines/candle-bench",
    "crates/engines/burn-bench",
    "crates/engines/mistral-rs-bench",
]
resolver = "2"

[workspace.dependencies]
# Minimal shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "process", "macros"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release" 
debug = true