[package]
name = "candle-bench"
version = "0.1.0"
edition = "2021"
description = "Candle CUDA inference benchmark"

[[bin]]
name = "candle-bench"
path = "src/main.rs"

[dependencies]
shared-protocol = { path = "../../shared-protocol" }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

# Candle-specific dependencies
candle-core = "0.7"
candle-transformers = "0.7"
candle-nn = "0.7"
hf-hub = "0.3"
tokenizers = "0.19"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]